modified 4 stats and std dev

--- a/4 stats/Exercise Stats 1 Dogs and Standard Deviation.ipynb
+++ b/4 stats/Exercise Stats 1 Dogs and Standard Deviation.ipynb
@@ -40,6 +40,12 @@
    "source": [
     "# Exercise\n",
     "\n",
+    "![Cameron's Best Friend](https://res.cloudinary.com/dkoqxjnsr/image/upload/v1558619635/w9ingxrc6oxvf58bkost.jpg)\n",
+    "\n",
+    "![lock](https://res.cloudinary.com/dkoqxjnsr/image/upload/v1560368042/lock_and_key_mli435.png)\n",
+    "\n",
+    "<img src=\"https://res.cloudinary.com/dkoqxjnsr/image/upload/v1560368042/lock_and_key_mli435.png\" alt=\"lock picture\">\n",
+    "\n",
     "You and your friends have just measured the heights of your dogs (in millimeters):\n",
     "    \n",
     "![Dogs Graph](statistics-dogs-graph.gif)\n",
