added DC Properties solution

--- a/solutions/KMeansClustering[Explained].ipynb
+++ b/solutions/KMeansClustering[Explained].ipynb
@@ -8,6 +8,7 @@
     "From \n",
     "* http://datameetsmedia.com/k-means-clustering-explained/\n",
     "* https://sciencing.com/centroid-clustering-analysis-10070345.html\n",
+    "* https://www.datascience.com/blog/k-means-clustering\n",
     "\n",
     "    "
    ]
@@ -27,7 +28,7 @@
     "> Our starting point is K=2. We made that up. It helps to be somewhat familiar with the data.\n",
     "\n",
     "* Step One: Pick two points at random, A and B. They will become the center of your clusters.\n",
-    "* Step Two: Assign every other point to either A or B based on closeness to A or B. Now every point belongs to a cluster. \n",
+    "* Step Two: Assign every point to either A or B based on closeness to A or B. Now every point belongs to a cluster. \n",
     "* Step Three: Calculate the center point (centroid). This is done by averaging out your points ()\n",
     "* Step Four: Now it may happen that some points are closer to another groups centroid than their own group's centroid. Go over each point and assign each to the cluster whose centroid it is nearest to.\n",
     "* Step Five: Repeat the process of calculating the centroid of each cluster, and assigning each point to the cluster whose centroid it is nearest to until a stopping condition is reached. For example, we could check if no point changes cluster in the next iteration or if the average inter-cluster error changes only very slightly. Once no point transfers cluster during an iteration, halt the K means clustering algorithm and consider the resulting clusters as final. Take a break. You must be exhausted!\n",
@@ -666,7 +667,7 @@
     "#k-means predicted clusters (in color) for the data points\n",
     "plt.scatter(df['feature1'],df['feature2'], c=df['cluster'], cmap= 'rainbow')\n",
     "\n",
-    "#new data point is the black dot\n",
+    "#new data point is the brown dot\n",
     "plt.scatter(kpred[0],kpred[1],c='brown')"
    ]
   },
